nestc/src/sema/snapshots/nestc__sema__tests__lir_snapshot_short_circuit_is_control_flow.snap
---
source: src/sema/tests.rs
expression: lir_text(src)
---
type core.str = struct {           // was a distinct; size 16, align 8
  0: []u8                    // +0
}
type []u8 = struct {           // was a slice; size 16, align 8
  ptr: *u8                    // +0
  len: u64                    // +8
}
type core.Location = struct {           // was a struct; size 24, align 8
  file: core.str                    // +0
  line: u32                    // +16
  column: u32                    // +20
}

func both(a_0: bool, b_1: bool) -> bool  // _NC4both
  let _2: bool
bb0:                    // entry
  _2 := a_0
  switch a_0 { 1 => bb1, _ => bb2 }
bb1:                    // && rhs
  _2 := b_1
  goto bb2
bb2:                    // join
  return _2
