nestc/src/sema/snapshots/nestc__sema__tests__lir_snapshot_unsafe_removes_the_checks_the_program_owns.snap
---
source: src/sema/tests.rs
expression: lir_text(src)
---
type []i32 = struct {           // was a slice; size 16, align 8
  ptr: *i32                    // +0
  len: u64                    // +8
}
type usize = struct {           // was a distinct; size 8, align 8
  0: u64                    // +0
}
type (i32, bool) = struct {           // was a tuple; size 8, align 4
  0: i32                    // +0
  1: bool                    // +4
}
type core.Location = struct {           // was a struct; size 24, align 8
  file: core.str                    // +0
  line: u32                    // +16
  column: u32                    // +20
}
type core.str = struct {           // was a distinct; size 16, align 8
  0: []u8                    // +0
}
type []u8 = struct {           // was a slice; size 16, align 8
  ptr: *u8                    // +0
  len: u64                    // +8
}
type (usize, bool) = struct {           // was a tuple; size 16, align 8
  0: usize                    // +0
  1: bool                    // +8
}

func raw(s_0: []i32, k_1: usize, d_2: i32) -> i32 #unsafe  // _NC3raw
  let _3: *[]i32
  let _4: *i32
  let _5: (i32, bool)
  let _6: core.Location
bb0:                    // entry
  _3 := &s_0
  _4 := _3.*.ptr + k_1 * stride(i32)
  _5 := checked_div(_4.*, d_2)
  switch _5.overflowed { 1 => bb1, _ => bb2 }
bb1:                    // overflow
  _6 := Location("mem:main", 1, 66)
  call core.panic("integer overflow", _6)
    @safepoint { live: [_6]
      _6 := reloc _6
    }
  unreachable
bb2:
  return _5.0
