nestc/src/sema/snapshots/nestc__sema__tests__lir_snapshot_while_loop_and_break.snap
---
source: src/sema/tests.rs
expression: lir_text(src)
---
type (i32, bool) = struct {           // was a tuple; size 8, align 4
  0: i32                    // +0
  1: bool                    // +4
}
type core.Location = struct {           // was a struct; size 24, align 8
  file: core.str                    // +0
  line: u32                    // +16
  column: u32                    // +20
}
type core.str = struct {           // was a distinct; size 16, align 8
  0: []u8                    // +0
}
type []u8 = struct {           // was a slice; size 16, align 8
  ptr: *u8                    // +0
  len: u64                    // +8
}
type usize = struct {           // was a distinct; size 8, align 8
  0: u64                    // +0
}
type (usize, bool) = struct {           // was a tuple; size 16, align 8
  0: usize                    // +0
  1: bool                    // +8
}

func count(n_0: i32) -> i32  // _NC5count
  let _1: i32
  let acc_2: i32
  let _3: i32
  let i_4: i32
  let _5: bool
  let _6: bool
  let _7: bool
  let _8: (i32, bool)
  let _9: core.Location
  let _10: (i32, bool)
  let _11: core.Location
bb0:                    // entry
  _1 := 0
  acc_2 := _1
  _3 := 0
  i_4 := _3
  goto bb1
bb1:                    // loop
  _5 := i_4 < n_0
  _6 := !_5
  switch _6 { 1 => bb3, _ => bb4 }
bb2:                    // loop exit
  return acc_2
bb3:                    // then
  goto bb2
bb4:                    // else
  goto bb5
bb5:                    // join
  _7 := i_4 == 3
  switch _7 { 1 => bb6, _ => bb7 }
bb6:                    // then
  goto bb2
bb7:                    // else
  goto bb8
bb8:                    // join
  _8 := checked_add(acc_2, i_4)
  switch _8.overflowed { 1 => bb9, _ => bb10 }
bb9:                    // overflow
  _9 := Location("mem:main", 6, 11)
  call core.panic("integer overflow", _9)
    @safepoint { live: [_9]
      _9 := reloc _9
    }
  unreachable
bb10:
  acc_2 := _8.0
  _10 := checked_add(i_4, 1)
  switch _10.overflowed { 1 => bb11, _ => bb12 }
bb11:                    // overflow
  _11 := Location("mem:main", 7, 9)
  call core.panic("integer overflow", _11)
    @safepoint { live: [_11]
      _11 := reloc _11
    }
  unreachable
bb12:
  i_4 := _10.0
  goto bb1
    @safepoint { live: [] }
