nestc/src/sema/snapshots/nestc__sema__tests__overflow_trap.snap
---
source: src/sema/tests.rs
expression: lir_text(src)
---
type (i32, bool) = struct {           // was a tuple; size 8, align 4
  0: i32                    // +0
  1: bool                    // +4
}
type core.Location = struct {           // was a struct; size 24, align 8
  file: core.str                    // +0
  line: u32                    // +16
  column: u32                    // +20
}
type core.str = struct {           // was a distinct; size 16, align 8
  0: []u8                    // +0
}
type []u8 = struct {           // was a slice; size 16, align 8
  ptr: *u8                    // +0
  len: u64                    // +8
}
type usize = struct {           // was a distinct; size 8, align 8
  0: u64                    // +0
}
type (usize, bool) = struct {           // was a tuple; size 16, align 8
  0: usize                    // +0
  1: bool                    // +8
}

func add(a_0: i32, b_1: i32) -> i32  // _NC3add
  let _2: (i32, bool)
  let _3: core.Location
bb0:                    // entry
  _2 := checked_add(a_0, b_1)
  switch _2.overflowed { 1 => bb1, _ => bb2 }
bb1:                    // overflow
  _3 := Location("mem:main", 1, 46)
  call core.panic("integer overflow", _3)
    @safepoint { live: [_3]
      _3 := reloc _3
    }
  unreachable
bb2:
  return _2.0
