nestc/src/sema/snapshots/nestc__sema__tests__overflow_wrap.snap
---
source: src/sema/tests.rs
expression: "lir_text_with(src, wrap)"
---
type core.str = struct {           // was a distinct; size 16, align 8
  0: []u8                    // +0
}
type []u8 = struct {           // was a slice; size 16, align 8
  ptr: *u8                    // +0
  len: u64                    // +8
}

func add(a_0: i32, b_1: i32) -> i32  // _NC3add
  let _2: i32
bb0:                    // entry
  _2 := add(a_0, b_1)
  return _2
